apps/loki/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: loki
  namespace: loki
spec:
  parentRefs:
    - name: eg
      namespace: envoy-gateway-system
  hostnames:
    - "loki.talos.froystein.jp"
  rules:
    - backendRefs:
        - name: loki-gateway
          port: 80
